Changed implementation for using resource loader